[workspace]
members = ["printer", "cli", "formatter", "plugins/serde-json"]
resolver = "2"

[workspace.package]
version = "0.1.18"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
leptosfmt-formatter = { path = "./formatter", version = "0.1.18" }
leptosfmt-pretty-printer = { version = "0.1.8" }

[patch.crates-io]
leptosfmt-pretty-printer = { path = "./printer" }
