[workspace]
members = ["printer", "cli", "formatter", "prettyplease"]
resolver = "2"

[workspace.package]
version = "0.1.18"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
leptosfmt-prettyplease = { path = "./prettyplease", version = "0.1.18", features = [
    "verbatim",
] }
leptosfmt-formatter = { path = "./formatter", version = "0.1.18" }
leptosfmt-pretty-printer = { version = "0.1.18" }

[patch.crates-io]
leptosfmt-pretty-printer = { path = "./printer" }
