[package]
name = "leptosfmt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
view_macro_formatter = { path = "../formatter" }
clap = { version = "4.1.11", features = ["derive"] }
rayon = "1.7.0"
glob = "0.3.1"
anyhow = "1.0.70"
