[package]
name = "leptosfmt"
version = { workspace = true }
edition = "2021"
authors = ["Bram Hoendervangers"]
license = { workspace = true }
repository = "https://github.com/bram209/leptosfmt"
description = "view macro formatter CLI for the Leptos web framework"
readme = "../README.md"

[dependencies]
leptosfmt-formatter = { workspace = true }
clap = { version = "4.1.11", features = ["derive"] }
rayon = "1.7.0"
glob = "0.3.1"
anyhow = "1.0.70"
