[package]
name = "leptosfmt-formatter"
version = { workspace = true }
edition = "2021"
authors = ["Bram Hoendervangers"]
license = { workspace = true }
repository = "https://github.com/bram209/leptosfmt"
description = "view macro formatter for the Leptos web framework"

[dependencies]
leptosfmt-pretty-printer.workspace = true
rstml = "0.10.6"
syn = { version = "2.0.18", features = ["visit", "full", "extra-traits"] }
leptosfmt-prettyplease = { features = ["verbatim"], version = "0.2.16" }
proc-macro2 = { version = "1.0.68", features = ["span-locations"] }
thiserror = "1.0.40"
crop = "0.3.0"
serde = { version = "1.0.163", features = ["derive"] }
quote = "1.0.26"

[dev-dependencies]
indoc = "2.0.1"
insta = "1.28.0"
quote = "1.0.26"
