[package]
name = "leptosfmt-formatter"
version = { workspace = true }
edition = "2021"
authors = ["Bram Hoendervangers"]
license = { workspace = true }
repository = "https://github.com/bram209/leptosfmt"
description = "view macro formatter for the Leptos web framework"

[dependencies]
leptosfmt-pretty-printer.workspace = true
leptosfmt-prettyplease.workspace = true
rstml = "0.11.2"
syn = { workspace = true }
proc-macro2 = { workspace = true }
thiserror = "1.0.61"
crop = "0.3.0"
serde = { version = "1.0.203", features = ["derive"] }
quote = "1.0.36"
rustywind_core = "= 0.1.2"

[dev-dependencies]
indoc = "2.0.5"
insta = "1.39.0"
quote = "1.0.36"
